...

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailTV_Login"
        android:layout_below="@+id/textView_Login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:hint="Email"
        android:textAlignment="center"
        android:textSize="25dp" />
...
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Password"
        android:ems="10"
        android:id="@+id/password_Login"
        android:layout_below="@+id/emailTV_Login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textSize="25dp"
        android:textAlignment="center" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/submitButton_Login"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
...
