...
    tools:showIn="@layout/activity_menu_page">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go To Map"
        android:id="@+id/goToMapBtn"
        android:layout_above="@+id/spouseOptionsBtn"
        android:layout_alignStart="@+id/spouseOptionsBtn"
        android:layout_marginBottom="35dp"
        android:layout_alignEnd="@+id/spouseOptionsBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Spouse Options"
        android:id="@+id/spouseOptionsBtn"
        android:layout_above="@+id/viewSpousesVisitsBtn"
        android:layout_marginBottom="35dp"
        android:layout_alignStart="@+id/viewSpousesVisitsBtn"
        android:layout_alignEnd="@+id/viewSpousesVisitsBtn" />

    <Button
        android:layout_width="wrap_content"
...
        android:layout_alignEnd="@+id/viewSOFavsBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Main Menu"
        android:id="@+id/title_main_menu"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>

