...
    tools:context=".favMapPage"
    tools:layout="@android:layout/simple_gallery_item" />

    <Button
        android:layout_width="105dp"
        android:layout_height="71dp"
        android:text="Add Favorite Place"
        android:id="@+id/addPlaceBtnID"
        android:layout_gravity="left|top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_gravity="left|bottom"
...
